<resources>
    <string name="app_name">맛나 반월당</string>
    <string name="main_search_bar_string">카테고리, 태그, 가게이름 검색</string>
    <string name="main_search_view_string">카테고리, 태그, 가게이름 검색</string>
    <string name="main_carousel_desc">캐러셀 리사이클러뷰(배너)</string>
    <string name="main_item_carousel_desc">배너_캐러셀 아이템</string>
    <string name="search_bar_string">음식점, 태그 등을 입력하세요.</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="main_category1_string">한식</string>
    <string name="main_category2_string">중식</string>
    <string name="main_category3_string">양식</string>
    <string name="main_category4_string">일식</string>
    <string name="main_category5_string">세계음식</string>
    <string name="main_category_text_string">카테고리</string>
    <string name="tag_text_string">태그</string>
    <string name="item_tag_string">#태그</string>
    <string name="Restaurant_title_string">전체 보기</string>
    <string name="main_tag_show_button_string">더 보기</string>
    <string name="sr_name">가게 이름</string>
    <string name="rs_review_date">2024년05월30일</string>
    <string name="rs_rating">4</string>
    <string name="rs_card_view">레스토랑 item</string>
    <string name="rs_image_desc">맛집 item 이미지</string>
    <string name="rs_rating_string">%1$s</string>
    <string name="search">search</string>
    <string name="searchbar_hint">가게이름, 카테고리, 태그를 검색해주세요.</string>
    <string name="title_activity_bottom_navigation_view">BottomNavigationView</string>
    <string name="title_home">홈</string>
    <string name="title_bookmark">북마크</string>
    <string name="title_rs_add">추가하기</string>
    <string name="dialog_check">확인</string>
    <string name="dialog_cancle">취소</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_bookmark">BookmarkActivity</string>
    <string name="bookmark_item_desc">Bookmark_item</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="bookmark_image_desc">가게 사진 혹은 메뉴 사진</string>
    <string name="bookmark_restaurant_name">가게 이름</string>
    <string name="bookmark_menu">가게 메뉴 1</string>
    <string name="bookmark_rating">3.5</string>
    <string name="bookmark_review_date">작성일</string>
    <string name="bookmarklayout">북마크레이아웃</string>
    <string name="bookmark_restaurant_name_desc">북마크레이아웃</string>
    <string name="bookmark_switch_desc">북마크 스위치버튼</string>
    <string name="bookmark_menu_desc">북마크 메뉴</string>
    <string name="bookmark_rating_desc">북마크 점수</string>
    <string name="bookmark_review_date_desc">북마크 작성일</string>
    <string name="search_result">검색결과 : %1$s</string>
    <string name="search_result_category_tags">검색결과 \n %1$s, %2$s</string>
    <string name="bottom_navi_home">Home</string>
    <string name="bottom_navi_near">NearMe</string>
    <string name="bottom_navi_favorite">Favorite</string>
    <string name="bottom_navi_add">Add</string>

</resources>