<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="200dp"
    android:layout_margin="8dp"
    android:contentDescription="@string/rs_card_view"
    app:cardBackgroundColor="#f9faef"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restaurant_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/restaurant_guide_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/restaurant_guide_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <ImageView
            android:id="@+id/rs_image"
            android:layout_width="0dp"
            android:layout_height="100sp"
            android:contentDescription="@string/rs_image_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/rs_test_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rs_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:fontFamily="@font/noto_sans_bold"
            android:gravity="start"
            android:minWidth="60dp"
            android:minHeight="24dp"
            android:text="@string/sr_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/restaurant_guide_right"
            app:layout_constraintStart_toEndOf="@id/restaurant_guide_left"
            app:layout_constraintTop_toBottomOf="@id/rs_image" />

        <!-- 등록일 -->
        <TextView
            android:id="@+id/rs_review_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/noto_sans"
            android:gravity="end"
            android:minWidth="60dp"
            android:minHeight="24dp"
            android:text="@string/rs_review_date"
            android:textSize="11sp"
            app:layout_constraintEnd_toStartOf="@id/restaurant_guide_right"
            app:layout_constraintStart_toEndOf="@id/restaurant_guide_left"
            app:layout_constraintTop_toBottomOf="@id/rs_name" />

        <TextView
            android:id="@+id/rs_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/noto_sans"
            android:minWidth="60dp"
            android:minHeight="24dp"
            android:text="@string/rs_rating"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/restaurant_guide_right"
            app:layout_constraintStart_toEndOf="@id/imageView4"
            app:layout_constraintTop_toBottomOf="@id/rs_review_date" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/rs_rating"
            app:layout_constraintEnd_toStartOf="@+id/rs_rating"
            app:layout_constraintStart_toEndOf="@id/restaurant_guide_left"
            android:layout_marginTop="-2dp"
            app:layout_constraintTop_toTopOf="@+id/rs_rating"
            app:srcCompat="@drawable/icon_bookmart_star" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
