<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorBackground_">

    <LinearLayout
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <!-- ChipGroup 추가 -->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/main_category_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleLine="false"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/main_category1"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/chip_background"
                android:checkable="true"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:fontFamily="@font/noto_sans"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/main_category1_string"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:checkedIcon="@drawable/icon_checked"
                app:checkedIconVisible="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/main_category2"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="?attr/selectableItemBackground"
                android:checkable="true"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:fontFamily="@font/noto_sans"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/main_category2_string"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:checkedIcon="@drawable/icon_checked"
                app:checkedIconVisible="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/main_category3"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="?attr/selectableItemBackground"
                android:checkable="true"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:fontFamily="@font/noto_sans"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/main_category3_string"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:checkedIcon="@drawable/icon_checked"
                app:checkedIconVisible="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/main_category4"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="?attr/selectableItemBackground"
                android:checkable="true"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:fontFamily="@font/noto_sans"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/main_category4_string"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:checkedIcon="@drawable/icon_checked"
                app:checkedIconVisible="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/main_category5"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="?attr/selectableItemBackground"
                android:checkable="true"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:fontFamily="@font/noto_sans"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/main_category5_string"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:checkedIcon="@drawable/icon_checked"
                app:checkedIconVisible="true" />

        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/scrollView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_no_btn"
            style="@style/dialog_cancel_button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/dialog_cancle"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_yes_btn"
            style="@style/dialog_check_button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/dialog_check" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>