<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.view.MapsActivity" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#eeefe3"
            android:contentDescription="@string/rs_card_view"
            app:cardBackgroundColor="#fafafa"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/restaurant_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/restaurant_guide_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.03" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/restaurant_guide_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.97" />

                <ImageView
                    android:id="@+id/rs_image"
                    android:layout_width="0dp"
                    android:layout_height="100sp"
                    android:contentDescription="@string/rs_image_desc"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rs_test_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/rs_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:fontFamily="@font/noto_sans_bold"
                    android:gravity="start"
                    android:minWidth="60dp"
                    android:minHeight="24dp"
                    android:text="@string/sr_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/restaurant_guide_right"
                    app:layout_constraintStart_toEndOf="@id/restaurant_guide_left"
                    app:layout_constraintTop_toBottomOf="@id/rs_image" />

                <!-- 등록일 -->
                <TextView
                    android:id="@+id/rs_review_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="end"
                    android:minWidth="60dp"
                    android:minHeight="24dp"
                    android:text="@string/rs_review_date"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/restaurant_guide_right"
                    app:layout_constraintStart_toEndOf="@id/rs_rating" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="여기를 클릭하시면 조회페이지로 이동합니다."
                    android:textSize="10dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/rs_rating"
                    app:layout_constraintEnd_toStartOf="@id/restaurant_guide_right"
                    app:layout_constraintStart_toEndOf="@id/restaurant_guide_left" />

                <TextView
                    android:id="@+id/rs_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/noto_sans"
                    android:minWidth="60dp"
                    android:minHeight="24dp"
                    android:text="@string/rs_rating"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/rs_review_date"
                    app:layout_constraintStart_toEndOf="@id/restaurant_guide_left" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnv_main"
        style="@style/BottomNavigationViewActiveIndicator"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bottomNavi_"
        app:itemIconTint="@color/bottom_navigation_selector"
        app:itemTextColor="@color/bottom_navigation_selector"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/botoomnavi" />
</androidx.constraintlayout.widget.ConstraintLayout>